# wgpu-minimal-video-rendering-example

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs
